--- a/.github/workflows/main_portfolio-bookstore.yml
+++ b/.github/workflows/main_portfolio-bookstore.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          npm install -g @angular/cli
           npm install --force
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
