--- a/.github/workflows/main_portfolio-bookstore.yml
+++ b/.github/workflows/main_portfolio-bookstore.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: /dist/Angular
+          path: dist/Angular
 
   deploy:
     runs-on: ubuntu-latest
